Create user with password strength validator

--- a/src/app/core/auth/login/features/login-detail/login-detail.component.html
+++ b/src/app/core/auth/login/features/login-detail/login-detail.component.html
@@ -43,8 +43,11 @@
     [disabled]="!form.valid"
     (click)="login()"
     class="button-color"
-    mat-raised-button
-    color="primary">
+    mat-raised-button>
     Login
+  </button>
+
+  <button (click)="createUserDialog()" class="mt-3" mat-raised-button>
+    Create User
   </button>
 </form>
